# ros2-simulator-system

./: .gitignore  README.md
docs/: ROS2_자율_프로세스_설계_구조_및_작업_순서_v2.md  ROS2_자율_프로세스_설계_구조_및_작업_순서_v4.md  setup_manual.md  setup_manual_2025-10-18.md  setup_manual_2025-10-23.md  setup_manual_2025-10-31.md  setup_manual_2026-02-07.md  setup_manual_2026-02-09.md  setup_manual_2026-02-12.md
docs/journal/: project_progress_log_2025-09-27.md  project_progress_log_2025-10-02.md  project_progress_log_2025-10-10.md  project_progress_log_2025-10-13.md  project_progress_log_2025-10-18.md  project_progress_log_2025-10-23.md  project_progress_log_2025-10-31.md  project_progress_log_2026-02-07.md  project_progress_log_2026-02-08.md  project_progress_log_2026-02-09.md  project_progress_log_2026-02-12.md
src/bridge_bringup/: package.xml  setup.cfg  setup.py
src/bridge_bringup/config/: system.wsl.yaml
src/bridge_bringup/launch/: bridge.launch.py
src/bridge_msgs/: CMakeLists.txt  package.xml
src/bridge_msgs/msg/: EnviromentStatus.msg  HandControlCommand.msg  IotControl.msg  TurtlebotStatus.msg
src/mapping_localization/: CMakeLists.txt  package.xml
src/mapping_localization/config/: mapper_params_online_async.yaml
src/mapping_localization/launch/: mapping.launch.py
src/safety_bringup/: CMakeLists.txt  package.xml
src/safety_bringup/config/: collision_monitor.yaml  twist_mux.yaml  velocity_smoother.yaml
src/safety_bringup/launch/: safety_chain.launch.py
src/sensor_bringup/: package.xml  setup.py
src/sensor_bringup/config/: sensors.yaml
src/sensor_bringup/launch/: sensor_bringup.launch.py
src/sensor_bringup/sensor_bringup/: scan_normalizer.py
src/state_estimator/: CMakeLists.txt  package.xml
src/state_estimator/launch/: odom.launch.py
src/state_estimator/params/: ekf.yaml  odom_publisher.yaml
src/state_estimator/src/: odom_publisher.cpp
src/udp_parsers_cpp/: CMakeLists.txt  package.xml
src/udp_parsers_cpp/launch/: parsers_all.launch.py
src/udp_parsers_cpp/src/: camera_jpeg_parser.cpp  custom_object_parser.cpp  ego_status_parser.cpp  env_status_parser.cpp  imu_parser.cpp  iot_status_parser.cpp  lidar_parser.cpp
src/udp_raw_bridge/: CMakeLists.txt  package.xml
src/udp_raw_bridge/launch/: raw_4ports.launch.py  raw_6ports.launch.py
src/udp_raw_bridge/src/: udp_raw_node.cpp
src/udp_tx_bridge/: CMakeLists.txt  package.xml
src/udp_tx_bridge/launch/: tx_all.launch.py
src/udp_tx_bridge/src/: udp_tx_cmd_vel_node.cpp  udp_tx_hand_control_node.cpp  udp_tx_iot_control_node.cpp
