<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bridge_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="j1113019@naver.com">j1113019</maintainer>
  <license>TODO: License declaration</license>

  <!-- 빌드 툴 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 메시지에서 참조하는 의존 패키지 -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- 메시지 패키지에 꼭 필요한 추가 의존 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- 테스트용 (원래 있던 내용 유지) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
