<!-- src/bridge_msgs/package.xml -->
<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bridge_msgs</name>
  <version>0.0.0</version>
  <description>C
    Custom ROS2 message definitions for simulator–ROS2 bridge.
    Defines unified message types (Ego, Env, IoT, Object) shared across all parser nodes.
  </description>
  <maintainer email="j1113019@naver.com">j1113019</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- ROSIDL message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 메시지 패키지 그룹 등록 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- Test tools -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
