<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_bringup</name>
  <version>0.1.0</version>
  <description>Sensor TF and topic management layer for LiDAR, IMU, and camera devices.</description>
  <maintainer email="j1113019@naver.com">j1113019</maintainer>
  <license>MIT</license>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>

  <!-- 런치 파일/경로 조회에 필요한 런타임 의존성 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <!-- 선택 메시지들 -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  

  <!-- Test deps -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
