<!-- src/udp_raw_bridge/package.xml -->
<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>udp_raw_bridge</name>
  <version>0.0.0</version>
  <description>
    UDP socket listener and publisher bridge for simulator → ROS2.
    Each port receives raw UDP packets and publishes them as std_msgs/ByteMultiArray.
  </description>
  <maintainer email="j1113019@todo.todo">j1113019</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Test tools -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
